# soroban-oracle-safety

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  LICENSE  PHASE_7_PRE.md  PHASE_8_PRE.md  PROJECT_NOTES.md  README.md  REFERENCES.md
.github/workflows/: ci.yml
crates/liquidity-registry/: Cargo.toml
crates/liquidity-registry/src/: lib.rs
crates/oracle-watch/: Cargo.toml
crates/oracle-watch/src/: aggregator.rs  config.rs  discord_sink.rs  generic_webhook_sink.rs  horizon_client.rs  main.rs  monitor.rs  pagerduty_sink.rs  registry_writer.rs  signer.rs  slack_sink.rs  telegram_sink.rs  types.rs
crates/safe-oracle/: Cargo.toml  README.md
crates/safe-oracle/src/: circuit_breaker.rs  lib.rs  reflector_client.rs  registry_client.rs
crates/safe-oracle/test_snapshots/: scenario_1_normal_borrow_happy_path.1.json  scenario_2_yieldblox_classic_blocked_by_layer1.1.json  scenario_3_yieldblox_sophisticated_blocked_by_layer2.1.json  scenario_4_liquidity_manipulation_drained_orderbook.1.json  scenario_5_thin_sampling_single_trade.1.json  scenario_6_stale_oracle_no_recent_updates.1.json  scenario_7_stale_snapshot_attester_offline.1.json  test_asset_other_uses_separate_storage_path.1.json  test_auto_halt_breaker_recovers_after_halt_window.1.json  test_auto_halt_disabled_by_default_preserves_phase_1_4_behavior.1.json  test_auto_halt_opens_breaker_after_first_violation.1.json  test_breaker_auto_recovers_at_exact_halt_until_ledger.1.json  test_breaker_halt_persists_over_multiple_calls.1.json  test_breaker_isolated_per_asset.1.json  test_breaker_isolation_between_assets_via_lastprice.1.json  test_breaker_opens_for_diverse_violation_types.1.json  test_breaker_opens_for_diverse_violation_types.2.json  test_breaker_reopens_after_recovery_on_new_violation.1.json  test_check_liquidity_blocks_missing_snapshot.1.json  test_check_liquidity_blocks_stale_snapshot.1.json  test_check_liquidity_blocks_yieldblox_thin_liquidity.1.json  test_check_liquidity_skips_for_asset_other.1.json  test_check_thin_sampling_blocks_yieldblox_single_trade.1.json  test_check_thin_sampling_passes_at_threshold.1.json  test_check_thin_sampling_passes_with_active_market.1.json  test_check_thin_sampling_skips_for_asset_other.1.json  test_close_after_open_resets_state.1.json  test_cross_source_decimals_match_proceeds_to_bps_check.1.json  test_cross_source_decimals_mismatch_rejects.1.json  test_cross_source_fails_when_secondary_price_is_zero.1.json  test_cross_source_fails_with_excessive_difference.1.json  test_cross_source_fresh_secondary_disagreement_still_caught.1.json  test_cross_source_passes_with_matching_prices.1.json  test_cross_source_passes_with_small_difference.1.json  test_cross_source_skipped_when_secondary_is_none.1.json  test_cross_source_skipped_when_secondary_returns_none.1.json  test_cross_source_stale_secondary_silently_skipped.1.json  test_deviation_fails_at_threshold_breach.1.json  test_deviation_fails_when_only_one_price_in_history.1.json  test_deviation_fails_when_previous_price_is_zero.1.json  (+41 more)
crates/safe-oracle/tests/: circuit_breaker.rs  e2e_attack_scenarios.rs  external_failure.rs  full_flow.rs  integration.rs  layer1_integration.rs  layer2_liquidity.rs  layer2_thin_sampling.rs  property_based.rs  registry_client.rs  validation.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/test-utils/test_snapshots/test/: test_new_creates_env_with_registered_contracts.1.json  test_new_creates_env_with_secondary_reflector.1.json  test_set_oracle_price_updates_reflector.1.json  test_set_secondary_oracle_price_updates_secondary_reflector.1.json
deployment/: testnet.json
mocks/mock-lending/: Cargo.toml
mocks/mock-lending/src/: lib.rs
mocks/mock-lending/test_snapshots/: test_borrow_blocks_stale_oracle_on_stellar_asset.1.json  test_borrow_blocks_stale_snapshot.1.json  test_borrow_blocks_yieldblox_classic_via_layer1.1.json  test_borrow_blocks_yieldblox_sophisticated_via_layer2.1.json  test_borrow_breaker_auto_recovers_after_halt_window.1.json  test_borrow_breaker_auto_recovers_after_halt_window_other.1.json  test_borrow_breaker_isolation_between_assets.1.json  test_borrow_breaker_isolation_between_other_assets.1.json  test_borrow_circuit_breaker_opens_after_first_violation.1.json  test_borrow_circuit_breaker_opens_after_first_violation_other.1.json  test_borrow_default_config_does_not_open_breaker.1.json  test_borrow_default_config_does_not_open_breaker_other.1.json  test_borrow_emits_event.1.json  test_borrow_fails_when_oracle_data_stale.1.json  test_borrow_fails_when_oracle_deviation_excessive.1.json  test_borrow_halted_asset_still_allows_deposit.1.json  test_borrow_halted_other_asset_still_allows_deposit.1.json  test_borrow_happy_path_passes_all_guardrails.1.json  test_borrow_succeeds_with_valid_oracle_data.1.json  test_deposit_records_amount.1.json  test_initialize_prevents_reinitialization.1.json  test_initialize_sets_storage.1.json
mocks/mock-lending/test_snapshots/test/: test_borrow_emits_event.1.json  test_borrow_succeeds_with_stub.1.json  test_deposit_records_amount.1.json  test_initialize_sets_storage.1.json
mocks/mock-lending/tests/: integration.rs
mocks/mock-reflector/: Cargo.toml
mocks/mock-reflector/src/: lib.rs
mocks/mock-reflector/test_snapshots/test/: test_decimals_and_resolution.1.json  test_lastprices_respects_records_limit.1.json  test_lastprices_returns_history_in_reverse_order.1.json  test_lastprices_returns_none_when_no_history.1.json  test_set_and_get_price.1.json  test_set_price_overwrites_previous.1.json
web/: .gitignore  STACK.md  package-lock.json  package.json
web/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: code-block.tsx  code-snippet.tsx  deck.tsx  hero.tsx  lenis-provider.tsx  marquee.tsx  nav.tsx  scroll-progress.tsx  section-pager.tsx  section-snap.tsx  snap-controller.tsx  stats-row.tsx  use-recede.ts
web/components/sections/: architecture.tsx  attack.tsx  audit.tsx  footer.tsx  how-it-works.tsx  infrastructure.tsx  (+6 more)
web/lib/: use-reduced-motion.ts
(+23 files in other folders)
