[workspace]
resolver = "2"
members = [
    "crates/safe-oracle",
    "crates/liquidity-registry",
    "crates/oracle-watch",
    "crates/test-utils",
    "mocks/mock-reflector",
    "mocks/mock-lending",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sahveli01 <Sahveli01@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sahveli01/soroban-oracle-safety"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
soroban-sdk = "25.3.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
hex = "0.4"
proptest = { version = "1", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
