[package]
name = "oracle-watch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
stellar-xdr = { workspace = true, features = ["base64"] }
sha2 = "0.10"
async-trait = { workspace = true }

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
