[package]
name = "safe-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Drop-in oracle protection for Stellar Soroban — five mathematically-verified guardrails against oracle manipulation attacks."
homepage = "https://soroban-oracle-safety.vercel.app"
documentation = "https://docs.rs/safe-oracle"
readme = "README.md"
keywords = ["stellar", "soroban", "oracle", "defi", "security"]
categories = ["cryptography::cryptocurrencies", "no-std"]
include = ["src/**/*", "Cargo.toml", "README.md"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-utils = { path = "../test-utils" }
proptest = { workspace = true }
# Hardening 5 (#18+#20): the manual-close-after-auto-halt regression
# test in tests/circuit_breaker.rs exercises the borrow path (which
# routes through MockLending and so shares its instance() storage with
# the cfg-gated breaker primitives). Direct dev-dep on mock-lending lets
# that test name `BorrowOutcome` and `MockLendingError` without pulling
# them through `test-utils` or duplicating the discriminant set.
mock-lending = { path = "../../mocks/mock-lending", features = ["testutils"] }
