[package]
name = "mock-lending"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enables test-only harness methods on `MockLending` (run_check, run_open,
# run_close) so consumer test crates can drive `safe_oracle::circuit_breaker`
# primitives through the same contract instance that hosts `borrow()`.
# Production WASM builds do not enable this feature.
# Hardening Phase debt #18+#20 — see lib.rs for full rationale.
#
# Downstream integrator warning (AR.H L3): if you fork this contract and
# enable `testutils` for your test pipeline, ensure your mainnet build
# configuration explicitly excludes this feature. Shipping a cdylib with
# `testutils` enabled exposes run_check/run_open/run_close as un-authorized
# entry points — effectively ceding admin override of the circuit breaker
# to any caller. Phase 7 may relocate these primitives to a separate
# sibling crate to eliminate the cfg-flag footgun at the build-system level.
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
safe-oracle = { path = "../../crates/safe-oracle" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-utils = { path = "../../crates/test-utils" }
